k8s/argocd/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.oliverilp.ee
    external-dns.alpha.kubernetes.io/target: 10.1.1.101
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  parentRefs:
    - name: traefik-internal-gateway
      namespace: traefik
  hostnames:
    - argocd.oliverilp.ee
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
